--- a/index.html
+++ b/index.html
@@ -11,10 +11,15 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-
     <img id="center-image" src="images/image.png" alt="Event Image">
 
-    <button id="preRegBtn">Pre-Register Today!</button>
+    <div class="button-container">
+        <button id="preRegBtn">Pre-Register Today!</button>
+        
+        <a href="rulebook.pdf" target="_blank" id="rulebookBtn" class="button-link">
+            <button>Code of Conduct</button>
+        </a>
+    </div>
 
     <script src="script.js"></script>
 </body>
