--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="button-container">
         <button id="preRegBtn">Pre-Register Today!</button>
         
-        <a href="rulebook.pdf" target="_blank" id="rulebookBtn" class="button-link">
+        <a href="images/test.jpg" target="_blank" id="rulebookBtn" class="button-link">
             <button>Code of Conduct</button>
         </a>
     </div>
