Fix button links and update image source

--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
     <div class="button-container">
         <button id="preRegBtn">Pre-Register Today!</button>
         
-        <a href="images/test.jpg" id="ruleBookBtn" class="button-link">
-            <button>Code of Conduct</button>
+        <a href="https://www.facebook.com/kagayanfurmeet" id="socMedBtn" class="button-link">
+            <button>Follow us on Facebook :3</button>
         </a>
     </div>
 
     <div class="button-container">
-        <a href="https://www.facebook.com/kagayanfurmeet" id="socMedBtn" class="button-link">
-            <button>Follow us on Facebook :3</button>
+        <a href="images/test.png" id="ruleBookBtn" class="button-link">
+            <button>Code of Conduct</button>
         </a>
     </div>
     
