Change rule book image link from PNG to JPG
Updated the image source for the rule book link.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </div>
 
     <div class="button-container">
-        <a href="images/test.png" id="ruleBookBtn" class="button-link">
+        <a href="images/test.jpg" id="ruleBookBtn" class="button-link">
             <button>Code of Conduct</button>
         </a>
     </div>
@@ -34,3 +34,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
