Change popup button text to 'Okay'
Updated the announcement popup button text from 'Got it!' to 'Okay'.

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </p>
 
             <!-- Button to close the popup -->
-            <button id="closePopup">Got it!</button>
+            <button id="closePopup">Okay</button>
         </div>
     </div>
     <!-- ====================================================== -->
@@ -47,7 +47,7 @@
     <!-- Social media buttons -->
     <div class="button-container">
         <a href="https://www.facebook.com/kagayanfurmeet" class="button-link">
-            <button>Follow us on Facebook Page 🐺</button>
+            <button>Follow us on Facebook 🐺</button>
         </a>
 
         <a href="https://discord.gg/nmNkrumNvT" class="button-link">
@@ -73,3 +73,4 @@
 
 </body>
 </html>
+
