Fix HTML formatting and update footer year

--- a/index.html
+++ b/index.html
@@ -66,11 +66,12 @@
     <p>---------</p>
 
     <!-- Footer -->
-    <p>&copy; 2025 - 2026 by Puting Lobo Studios</p>
+    <p>&copy; 2026 by Puting Lobo Studios</p>
 
     <!-- JavaScript file -->
     <script src="script.js"></script>
 
 </body>
 </html>
+
 
