modified:   events.html

--- a/events.html
+++ b/events.html
@@ -33,7 +33,7 @@
                     <img src="images/kfm2026.jpg" alt="Kagay-an FurMeet 2026" class="event-image" loading="lazy">
                     <div class="event-info">
                         <h2>Kagay-an FurMeet (KFM) 2026</h2>
-                        <p>Details about the primary gathering including date, time, and specific location in CDO.</p>
+                        <p>The first furry meetup in CDO history!</p>
                     </div>
                 </article>
             </div>
