modified:   events.html

--- a/events.html
+++ b/events.html
@@ -33,12 +33,14 @@
                     <img src="images/kfm2026.jpg" alt="Kagay-an FurMeet 2026" class="event-image" loading="lazy">
                     <div class="event-info">
                         <h2>Kagay-an FurMeet (KFM) 2026</h2>
+                        <h3>Jan 25, 2026</h3>
                         <p>The first furry meetup in CDO history!</p>
                     </div>
                 </article>
             </div>
         </section>
 
+      <main class="page-main">
         <section>
             <h1>Previous Events</h1>
             <div class="event-container">
