--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kagay-an FurMeet (KFM)</title>
 
-    <meta name="description" content="Kagay-an FurMeet (KFM) — The first and only furry meetup in CDO!">
+    <meta name="description" content="The first and only furry meetup in CDO!">
     <meta property="og:image" content="images/icon.png">
     
     <link rel="icon" type="image/png" href="images/icon.png">
