--- a/events.html
+++ b/events.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>Events - Kagay-an FurMeet (KFM)</title>
     <link rel="icon" type="image/png" href="images/icon.png">
     <link rel="stylesheet" href="styles.css">
+
+    <!-- animate.css -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 </head>
+
 <body>
     <header class="site-header">
         <nav class="navbar">
@@ -16,13 +21,45 @@
                 <li class="dropdown">
                     <a href="#" id="eventsToggle" aria-expanded="false">Attending KFM</a>
                     <div class="dropdown-menu" id="eventsMenu" aria-hidden="true">
-                        <a href="https://forms.gle/TouwmDawXe7st4Ae7" class="event-item" target="_blank" rel="noopener noreferrer">KFM 2026</a>
+                        <a href="https://forms.gle/TouwmDawXe7st4Ae7" class="event-item" target="_blank"
+                            rel="noopener noreferrer">KFM 2026</a>
                     </div>
                 </li>
-                <li><a href="https://drive.google.com/drive/folders/1I_UhlJ3BJXNws34uq_As5xthoUe6L4hL?usp=sharing" target="_blank" rel="noopener noreferrer">Archives</a></li>
-                <li><a href="https://docs.google.com/document/d/1L32Nf1glzoDRwNoTBFLNTJn5WfENSwUQMJab2Hxl-fc/edit?usp=sharing" target="_blank" rel="noopener noreferrer">Code of Conduct</a></li>
+                <li><a href="https://drive.google.com/drive/folders/1I_UhlJ3BJXNws34uq_As5xthoUe6L4hL?usp=sharing"
+                        target="_blank" rel="noopener noreferrer">Archives</a></li>
+                <li><a href="https://docs.google.com/document/d/1L32Nf1glzoDRwNoTBFLNTJn5WfENSwUQMJab2Hxl-fc/edit?usp=sharing"
+                        target="_blank" rel="noopener noreferrer">Code of Conduct</a></li>
             </ul>
         </nav>
+
+        <!-- mobile navigation -->
+        <div id="mobile-navigation"
+            class="animate__animated animate__bounceInDown animat__slow mobile-navigation-container"
+            style="margin-left: 10px; margin-top: 8px; padding: 12px; border-radius: 12px; width: fit-content; box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px, rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;">
+            <!-- menu icon container  -->
+            <div style="display: flex; flex-direction: column; gap: 5px;">
+                <!-- bars -->
+                <div style="width: 35px; height: 5px; background-color: black; border-radius: 12px;"></div>
+                <div style="width: 35px; height: 5px; background-color: black; border-radius: 12px;"></div>
+                <div style="width: 35px; height: 5px; background-color: black; border-radius: 12px;"></div>
+            </div>
+        </div>
+
+        <ul id="mobile-navigation-links" class="animate__animated animate__faster mobile-nav-links hide">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="events.html">Events</a></li>
+            <li class="dropdown">
+                <a href="#" id="eventsToggle" aria-expanded="false">Attending KFM</a>
+                <div class="dropdown-menu" id="eventsMenu" aria-hidden="true">
+                    <a href="https://forms.gle/TouwmDawXe7st4Ae7" class="event-item" target="_blank"
+                        rel="noopener noreferrer">KFM 2026</a>
+                </div>
+            </li>
+            <li><a href="https://drive.google.com/drive/folders/1I_UhlJ3BJXNws34uq_As5xthoUe6L4hL?usp=sharing"
+                    target="_blank" rel="noopener noreferrer">Archives</a></li>
+            <li><a href="https://docs.google.com/document/d/1L32Nf1glzoDRwNoTBFLNTJn5WfENSwUQMJab2Hxl-fc/edit?usp=sharing"
+                    target="_blank" rel="noopener noreferrer">Code of Conduct</a></li>
+        </ul>
     </header>
 
     <main class="page-main">
@@ -40,35 +77,37 @@
             </div>
         </section>
 
-      <main class="page-main">
-        <section>
-            <h1>Previous Events</h1>
-            <div class="event-container">
-                <article class="event-card">
-                    <img src="images/kfm0.jpg" alt="Kagay-an FurMeet 0" class="event-image" loading="lazy">
-                    <div class="event-info">
-                        <h2>Kagay-an FurMeet 0</h2>
-                        <h3>Nov 23, 2025</h3>
-                        <p>Dry run in preparation for Kagay-an FurMeet 2026.</p>
-                    </div>
-                </article>
+        <main class="page-main">
+            <section>
+                <h1>Previous Events</h1>
+                <div class="event-container">
+                    <article class="event-card">
+                        <img src="images/kfm0.jpg" alt="Kagay-an FurMeet 0" class="event-image" loading="lazy">
+                        <div class="event-info">
+                            <h2>Kagay-an FurMeet 0</h2>
+                            <h3>Nov 23, 2025</h3>
+                            <p>Dry run in preparation for Kagay-an FurMeet 2026.</p>
+                        </div>
+                    </article>
 
-                <article class="event-card">
-                    <img src="images/m&gwdh.jpg" alt="Meet and Greet with Duke Horde" class="event-image" loading="lazy">
-                    <div class="event-info">
-                        <h2>Meet and Greet with Duke Horde</h2>
-                        <h3>Dec 20, 2025</h3>
-                        <p>Special Meet & Greet with Duke Horde, a somewhat famous VR fur.</p>
-                    </div>
-                </article>
-            </div>
-        </section>
-    </main>
+                    <article class="event-card">
+                        <img src="images/m&gwdh.jpg" alt="Meet and Greet with Duke Horde" class="event-image"
+                            loading="lazy">
+                        <div class="event-info">
+                            <h2>Meet and Greet with Duke Horde</h2>
+                            <h3>Dec 20, 2025</h3>
+                            <p>Special Meet & Greet with Duke Horde, a somewhat famous VR fur.</p>
+                        </div>
+                    </article>
+                </div>
+            </section>
+        </main>
 
-    <footer>
-        <p>&copy; 2026 Puting Lobo Studios</p>
-    </footer>
+        <footer>
+            <p>&copy; 2026 Puting Lobo Studios</p>
+        </footer>
 
-    <script src="script.js"></script>
+        <script src="script.js"></script>
 </body>
+
 </html>
