modified:   events.html modified:   index.html modified:   script.js

--- a/events.html
+++ b/events.html
@@ -104,7 +104,7 @@
         </main>
 
         <footer>
-            <p>&copy; 2026 Puting Lobo Studios</p>
+            <p>&copy; 2026 Puting Lobo Studios & Dojimori</p>
         </footer>
 
         <script src="script.js"></script>
