--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2026 Puting Lobo Studios</p>
+        <p>&copy; 2026 Puting Lobo Studios & Dojimori</p>
     </footer>
 
     <script src="script.js"></script>
