--- a/events.html
+++ b/events.html
@@ -8,14 +8,61 @@
     <link rel="icon" type="image/png" href="images/icon.png">
     <link rel="stylesheet" href="styles.css">
 
-    <!-- animate.css -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <!-- font awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css">
 </head>
 
 <body>
     <header class="site-header">
         <nav class="navbar">
+            <div class="navbar-title">
+                <i class="fa-solid fa-paw"></i>
+                <h1>KFM</h1>
+            </div>
             <ul class="nav-links">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="events.html">Events</a></li>
+
+                <li class="dropdown">
+                    <a href="#" id="eventsToggle" aria-expanded="false">Attending KFM</a>
+                    <div class="dropdown-menu" id="eventsMenu" aria-hidden="true">
+                        <a href="https://forms.gle/TouwmDawXe7st4Ae7" class="event-item" target="_blank"
+                            rel="noopener noreferrer">KFM 2026</a>
+                    </div>
+                </li>
+
+                <li><a href="https://drive.google.com/drive/folders/1I_UhlJ3BJXNws34uq_As5xthoUe6L4hL?usp=sharing"
+                        target="_blank" rel="noopener noreferrer">Archives</a></li>
+                <li><a href="https://docs.google.com/document/d/1L32Nf1glzoDRwNoTBFLNTJn5WfENSwUQMJab2Hxl-fc/edit?usp=sharing"
+                        target="_blank" rel="noopener noreferrer">Code of Conduct</a></li>
+            </ul>
+        </nav>
+
+
+        <!-- mobile navigation -->
+        <div id="mobile-navigation" class="mobile-navigation-container"
+            style="margin-left: 10px; margin-top: 8px; padding: 12px; border-radius: 12px; width: fit-content; box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px, rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;">
+
+
+            <!-- menu icon container  -->
+            <div style="display: flex; flex-direction: column; gap: 5px;">
+                <!-- bars -->
+                <div style="width: 35px; height: 5px; background-color: black; border-radius: 12px;"></div>
+                <div style="width: 35px; height: 5px; background-color: black; border-radius: 12px;"></div>
+                <div style="width: 35px; height: 5px; background-color: black; border-radius: 12px;"></div>
+            </div>
+        </div>
+
+        <ul id="mobile-navigation-links" class="mobile-nav-links    ">
+            <div style=" display: flex; justify-content: space-between; padding: 2px;">
+                <div class="navbar-title">
+                    <i class="fa-solid fa-paw"></i>
+                    <h1>KFM</h1>
+                </div>
+                <button class="close-mobile-nav" id="close-mobile-nav"><i class="fa-solid fa-xmark"></i></button>
+            </div>
+            <div>
+
                 <li><a href="index.html">Home</a></li>
                 <li><a href="events.html">Events</a></li>
                 <li class="dropdown">
@@ -29,38 +76,11 @@
                         target="_blank" rel="noopener noreferrer">Archives</a></li>
                 <li><a href="https://docs.google.com/document/d/1L32Nf1glzoDRwNoTBFLNTJn5WfENSwUQMJab2Hxl-fc/edit?usp=sharing"
                         target="_blank" rel="noopener noreferrer">Code of Conduct</a></li>
-            </ul>
-        </nav>
-
-        <!-- mobile navigation -->
-        <div id="mobile-navigation"
-            class="animate__animated animate__bounceInDown animat__slow mobile-navigation-container"
-            style="margin-left: 10px; margin-top: 8px; padding: 12px; border-radius: 12px; width: fit-content; box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px, rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;">
-            <!-- menu icon container  -->
-            <div style="display: flex; flex-direction: column; gap: 5px;">
-                <!-- bars -->
-                <div style="width: 35px; height: 5px; background-color: black; border-radius: 12px;"></div>
-                <div style="width: 35px; height: 5px; background-color: black; border-radius: 12px;"></div>
-                <div style="width: 35px; height: 5px; background-color: black; border-radius: 12px;"></div>
             </div>
-        </div>
 
-        <ul id="mobile-navigation-links" class="animate__animated animate__faster mobile-nav-links hide">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="events.html">Events</a></li>
-            <li class="dropdown">
-                <a href="#" id="eventsToggle" aria-expanded="false">Attending KFM</a>
-                <div class="dropdown-menu" id="eventsMenu" aria-hidden="true">
-                    <a href="https://forms.gle/TouwmDawXe7st4Ae7" class="event-item" target="_blank"
-                        rel="noopener noreferrer">KFM 2026</a>
-                </div>
-            </li>
-            <li><a href="https://drive.google.com/drive/folders/1I_UhlJ3BJXNws34uq_As5xthoUe6L4hL?usp=sharing"
-                    target="_blank" rel="noopener noreferrer">Archives</a></li>
-            <li><a href="https://docs.google.com/document/d/1L32Nf1glzoDRwNoTBFLNTJn5WfENSwUQMJab2Hxl-fc/edit?usp=sharing"
-                    target="_blank" rel="noopener noreferrer">Code of Conduct</a></li>
         </ul>
     </header>
+
 
     <main class="page-main">
         <section>
