Change background image in index.html
Updated the background image source in the main section.

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     </header>
 
     <main>
-        <img id="center-image" src="images/new%20default%20backgroud.png" alt="Kagay-an FurMeet banner" loading="lazy">
+        <img id="center-image" src="images/default%20bg.png" alt="Kagay-an FurMeet banner" loading="lazy">
 
         <h1>THE FIRST AND ONLY FURRY MEETUP IN CDO!</h1>
 
@@ -108,5 +108,6 @@
 
     <script src="script.js"></script>
 </body>
+
 
 </html>
