Update event image for Kagay-an FurMeet 2026

--- a/events.html
+++ b/events.html
@@ -87,7 +87,7 @@
             <h1>Upcoming Events</h1>
             <div class="event-container">
                 <article class="event-card">
-                    <img src="images/kfm2026.jpg" alt="Kagay-an FurMeet 2026" class="event-image" loading="lazy">
+                    <img src="images/kfm2026.png" alt="Kagay-an FurMeet 2026" class="event-image" loading="lazy">
                     <div class="event-info">
                         <h2>Kagay-an FurMeet (KFM) 2026</h2>
                         <h3>Jan 25, 2026</h3>
