Update events section with new event details
Removed KFM 2026 event link and details, added placeholder for no events. Added new KFM 2026 event card with details.

--- a/events.html
+++ b/events.html
@@ -26,8 +26,8 @@
                 <li class="dropdown">
                     <a href="#" id="eventsToggle" aria-expanded="false">Attending KFM</a>
                     <div class="dropdown-menu" id="eventsMenu" aria-hidden="true">
-                        <a href="https://forms.gle/TouwmDawXe7st4Ae7" class="event-item" target="_blank"
-                            rel="noopener noreferrer">KFM 2026</a>
+                        <a href="#" class="event-item" target="_blank"
+                            rel="noopener noreferrer">No Events</a>
                     </div>
                 </li>
 
@@ -87,11 +87,11 @@
             <h1>Upcoming Events</h1>
             <div class="event-container">
                 <article class="event-card">
-                    <img src="images/kfm2026.png" alt="Kagay-an FurMeet 2026" class="event-image" loading="lazy">
+                    <img src="images/" alt="Testificate" class="event-image" loading="lazy">
                     <div class="event-info">
-                        <h2>Kagay-an FurMeet (KFM) 2026</h2>
-                        <h3>Jan 25, 2026</h3>
-                        <p>The first furry meetup in CDO history!</p>
+                        <h2></h2>
+                        <h3></h3>
+                        <p></p>
                     </div>
                 </article>
             </div>
@@ -117,6 +117,19 @@
                             <h2>Meet and Greet with Duke Horde</h2>
                             <h3>Dec 20, 2025</h3>
                             <p>Special Meet & Greet with Duke Horde, a somewhat famous VR fur.</p>
+                        </div>
+                    </article>
+                </div>
+            </section>
+        </main>
+
+        <article class="event-card">
+                        <img src="images/kfm2026.jpg" alt="Kagay-an FurMeet (KFM) 2026" class="event-image"
+                            loading="lazy">
+                        <div class="event-info">
+                            <h2>Kagay-an FurMeet (KFM) 2026</h2>
+                            <h3>Jan 25, 2026</h3>
+                            <p>The first furry meetup in CDO history!</p>
                         </div>
                     </article>
                 </div>
