Fix event image source and alt attributes
Updated event image source and added alt text.

--- a/events.html
+++ b/events.html
@@ -85,9 +85,10 @@
     <main class="page-main">
         <section>
             <h1>Upcoming Events</h1>
+            <!--
             <div class="event-container">
                 <article class="event-card">
-                    <img src="images/" alt="Testificate" class="event-image" loading="lazy">
+                    <img src="images/" alt="" class="event-image" loading="lazy">
                     <div class="event-info">
                         <h2></h2>
                         <h3></h3>
@@ -96,8 +97,8 @@
                 </article>
             </div>
         </section>
-
-        <main class="page-main">
+            -->
+            
             <section>
                 <h1>Previous Events</h1>
                 <div class="event-container">
@@ -123,8 +124,8 @@
             </section>
         </main>
 
-        <article class="event-card">
-                        <img src="images/kfm2026.jpg" alt="Kagay-an FurMeet (KFM) 2026" class="event-image"
+                <article class="event-card">
+                        <img src="images/kfm2026.png" alt="Kagay-an FurMeet (KFM) 2026" class="event-image"
                             loading="lazy">
                         <div class="event-info">
                             <h2>Kagay-an FurMeet (KFM) 2026</h2>
