--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
                 <li class="dropdown">
                     <a href="#" id="eventsToggle" aria-expanded="false">Attending KFM</a>
                     <div class="dropdown-menu" id="eventsMenu" aria-hidden="true">
-                        <a href="https://forms.gle/TouwmDawXe7st4Ae7" class="event-item" target="_blank"
-                            rel="noopener noreferrer">KFM 2026</a>
+                        <a href="#" class="event-item" target="_blank"
+                            rel="noopener noreferrer">No Events</a>
                     </div>
                 </li>
                 <li><a href="https://drive.google.com/drive/folders/1I_UhlJ3BJXNws34uq_As5xthoUe6L4hL?usp=sharing"
